#118 Show the bed's width & length in the correct order on the bed's overview sidebar

--- a/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-overview/template/bed-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-overview/template/bed-overview.html
@@ -15,7 +15,7 @@
             {{ bedVM.bed.capacity.maxNoBabies }} <span class="unitpal-font">B</span>
         </small>
         <br/>
-        <small>Size <i class="fa fa-arrows-h"></i> {{ bedVM.bed.size.lengthCm }} <i class="fa fa-arrows-v"> {{ bedVM.bed.size.widthCm }}</i></small>
+        <small>Size <i class="fa fa-arrows-h"> {{ bedVM.bed.size.widthCm }}</i> <i class="fa fa-arrows-v"></i> {{ bedVM.bed.size.lengthCm }}</small>
     </div>
     
     <div *ngIf="accommodatesBabies">
