#108 Added Undo Check-In functionality on Back End + Front End

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
@@ -80,6 +80,9 @@
 		<div class="row">
 			<booking-send-confirmation [bookingOperationsPageData]="bookingOperationsPageData"></booking-send-confirmation>
 		</div>
+		<div class="row">
+			<booking-undo-checkin [bookingOperationsPageData]="bookingOperationsPageData" (onBookingUndoCheckIn)="didChangeBooking($event) && loadPageData()"></booking-undo-checkin>
+		</div>
 		<div class="row padding-bottom-10px">
 			<booking-links [bookingOperationsPageData]="bookingOperationsPageData"></booking-links>
 		</div>
