#129 Replaced the `Add Bookings` label with `Save Bookings`

--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/container/template/new-booking-container.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/container/template/new-booking-container.html
@@ -19,7 +19,7 @@
 						<a class="btn btn-square btn-square-finalize" *ngIf="isLastStep()" [ngClass]="{disabled: !canMoveNext()}" (click)="addBookings()" >
 							<i *ngIf="!isAddingBookings" class="fa fa-envelope"></i> 
 							<i *ngIf="isAddingBookings" class="fa fa-spinner fa-pulse"></i>
-							{{'Add Bookings' | translate}}
+							{{'Save Bookings' | translate}}
 						</a>
 					</p>
 					<p class="btn-err-container" *ngIf="errorString">
