--- a/assets/client/src/pages/internal/containers/common/inventory/add-on-products/modal/template/add-on-products-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/add-on-products/modal/template/add-on-products-modal.html
@@ -3,10 +3,21 @@
 	<h4 class="modal-title">{{ pageTitle | translate }}</h4>
 </div>
 <div class="modal-body table-selection">
-	<lazy-loading-table (onMultiSelect)="didSelectAddOnProductList($event)" (onSelect)="didSelectAddOnProduct($event)"></lazy-loading-table>
+	<lazy-loading-table 
+		[hidden]="isEditing"
+		(onMultiSelect)="didSelectAddOnProductList($event)"
+		(onSelect)="didSelectAddOnProduct($event)"
+		(onAdd)="addAddOnProduct()"
+		(onEdit)="editAddOnProduct($event)">
+	</lazy-loading-table>
+	<add-on-product-edit
+		*ngIf="isEditing"
+		[addOnProductVM]="editingAddOnVM"
+		(onExit)="exitEditMode()">
+	</add-on-product-edit>
 </div>
 <div class="modal-footer">
-	<button type="button" class="btn btn-primary" [disabled]="!didSelectAtLeastOneAddOnProduct()" (click)="triggerSelectedAddOnProduct()">
+	<button type="button" class="btn btn-primary" [disabled]="!didSelectAtLeastOneAddOnProduct() || isEditing" (click)="triggerSelectedAddOnProduct()">
 		{{ 'Select' | translate }}
 	</button>
 </div>
