--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
@@ -1,4 +1,4 @@
-<div class="col-md-4 col-sm-4 col-xs-12 form-group">
+<div class="col-xs-12 form-group">
 	<label>{{ 'Price per person' | translate }} </label>
 	<div class="input-group">
 		<div class="btn-group" data-toggle="buttons">
@@ -20,35 +20,37 @@
 	</small>
 </div>
 
-<div class="col-md-8 col-sm-8 col-xs-12">
+<div class="col-xs-12">
 	<loading-component [isLoading]="isLoading"></loading-component>
 	<div class="row" *ngIf="!isLoading">
 		<div class="col-xs-12 form-group">
 			<label>{{ 'Price configuration in %ccySymbol%' | translate:{ccySymbol: ccy.nativeSymbol} }}</label>
 
-			<div class="row">
-				<div class="col-md-12 col-sm-12 col-xs-12 form-group" *ngFor="let priceVM of priceContainer.priceVMList">
-					<label>{{ priceVM.roomCategoryStats.roomCategory.displayName }}
-						<small> 
-							{{ getNoRoomsLabel(priceVM.roomCategoryStats.noOfRooms) }} x
-							<config-capacity [configCapacity]="priceVM.roomCategoryStats.capacity.totalCapacity"></config-capacity>
-						</small>
-					</label>
-					<a class="btn" 
-						*ngIf="priceVM.previousRoomCategoryId && !readonly" 
-						(click)="priceContainer.copyPrices(priceVM.previousRoomCategoryId, priceVM.roomCategoryStats.roomCategory.id)">
-						<i class="fa unitpal-font">[</i> <small>{{ 'Copy Prices from Previous Room Category' | translate }}</small>
-					</a>
+			<div class="row row-eq-height">
+				<div class="col-md-6 col-sm-12 col-xs-12 form-group" *ngFor="let priceVM of priceContainer.priceVMList">
+					<div class="price-product-box">
+						<label>{{ priceVM.roomCategoryStats.roomCategory.displayName }}
+							<small> 
+								{{ getNoRoomsLabel(priceVM.roomCategoryStats.noOfRooms) }} x
+								<config-capacity [configCapacity]="priceVM.roomCategoryStats.capacity.totalCapacity"></config-capacity>
+							</small>
+						</label>
+						<a class="btn" 
+							*ngIf="priceVM.previousRoomCategoryId && !readonly" 
+							(click)="priceContainer.copyPrices(priceVM.previousRoomCategoryId, priceVM.roomCategoryStats.roomCategory.id)">
+							<i class="fa unitpal-font">[</i> <small>{{ 'Copy Prices from Previous Room Category' | translate }}</small>
+						</a>
 
-					<price-edit 
-						[displayError]="displayError()"
-						[readonly]="readonly"
-						[priceType]="priceType"
-						[roomCategoryStats]="priceVM.roomCategoryStats"
-						[(price)]="priceVM.price">
-					</price-edit>
+						<price-edit 
+							[displayError]="displayError()"
+							[readonly]="readonly"
+							[priceType]="priceType"
+							[roomCategoryStats]="priceVM.roomCategoryStats"
+							[(price)]="priceVM.price">
+						</price-edit>
 
-					<!-- TODO: display price exceptions -->
+						<!-- TODO: display price exceptions -->
+					</div>
 				</div>
 			</div>
 		</div>
