#175 Changed the label for price exceptions

--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
@@ -85,7 +85,7 @@
 									<td></td>
 								</tr>
 							</tbody>
-							<small class="text-muted"><i class="fa fa-info-circle"></i> {{ 'Exceptions for the default prices' | translate }} </small>
+							<small class="text-muted"><i class="fa fa-info-circle"></i> {{ 'Custom prices for different days of the week' | translate }} </small>
 						</table>
 					</div>
 				</div>
