#175 Fixed an issue on price exception list when initially selecting room category

--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/price-exception-modal/template/price-exception-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/price-exception-modal/template/price-exception-modal.html
@@ -22,7 +22,7 @@
 		</div>
 		<div class="col-md-12">
 			<price-edit 
-				[displayError]="displayError"
+				[displayError]="false"
 				[readonly]="readonly"
 				[priceType]="priceVM.priceType"
 				[roomCategoryStats]="priceVM.roomCategoryStats"
