#132 Added tooltip for booking cancellation hour

--- a/assets/client/src/pages/internal/containers/common/basic-info/property-details/main/template/basic-info-property-details-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/property-details/main/template/basic-info-property-details-edit.html
@@ -49,6 +49,7 @@
                     <th-hour-select [initialHour]="hotel.operationHours.cancellationHour" (onHourSelected)="diChangeCancellationHour($event)"
                         [isRequired]="true" errorMessage="{{ 'Required' | translate }}" [didSubmitForm]="didSubmitForm">
                     </th-hour-select>
+                    <small class="text-muted"><i class="fa fa-info-circle"></i> {{ 'The hour chosen will be when reservations gets cancelled on day of arrival if payment is not guaranteed.' | translate }}</small>
                 </div>
             </div>
         </div>
