#172 Updated ansible scripts to generate papertrail config for azure

--- a/ansible/roles/unitpal/templates/azure.js.j2
+++ b/ansible/roles/unitpal/templates/azure.js.j2
@@ -43,6 +43,16 @@ module.exports = {
 		googleAnalytics: {
 			enabled: "{{ google_analytics_enabled }}",
 			trackingId: "{{ google_analytics_tracking_id }}"
-		}
+		},
+        loggerChannels: [
+            {
+                type: "papertrail",
+                options: {
+                    host: {{ papertrail_host }},
+                    port: {{ papertrail_port }},
+                    level: "debug"
+                }
+            },
+        ]
 	}
 };
