[HotFix] Added missing quotes in azure.js

--- a/ansible/roles/unitpal/templates/azure.js.j2
+++ b/ansible/roles/unitpal/templates/azure.js.j2
@@ -48,7 +48,7 @@ module.exports = {
             {
                 type: "papertrail",
                 options: {
-                    host: {{ papertrail_host }},
+                    host: "{{ papertrail_host }}",
                     port: {{ papertrail_port }},
                     level: "debug"
                 }
