#171 Replaced Edit with Add/Edit if the price product's price has exceptions set

--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
@@ -77,7 +77,7 @@
 										<span *ngIf="!readonly">
 											<a class="btn btn-xs" (click)="openPriceExceptionModal(priceVM)">
 												<span *ngIf="!priceVM.hasExceptions()"><i class="fa unitpal-font">'</i> {{ 'Add' | translate }}</span>
-												<span *ngIf="priceVM.hasExceptions()"><i class="fa unitpal-font">]</i> {{ 'Edit' | translate }}</span>
+												<span *ngIf="priceVM.hasExceptions()"><i class="fa unitpal-font">]</i> {{ 'Add / Edit' | translate }}</span>
 											</a>
 										</span>
 									</td>
